src/objects/DeviceCarrierAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>R00N40000001hPdAEAU</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Device_Carrier_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Device_Carrier External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Carriers</relationshipLabel>
        <relationshipName>R00N40000001hPd5EAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Device Carrier</label>
    <nameField>
        <displayFormat>DevCarr-{0000}</displayFormat>
        <label>Device Carrier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Carriers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>